[package]
name = "support-bundle-viewer"
description = "Tools for inspecting an Oxide support bundle"
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
bytes = "1.10.1"
camino = { version = "1.1", features = ["serde1"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
tokio = { version = "1.47.1", features = ["io-util", "io-std", "time"] }
zip = { version = "4.6.1", default-features = false, features = ["deflate","bzip2"] }
